--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/thdevss/broker-pub/issues"
   },
-  "homepage": "https://github.com/thdevss/broker-pub#readme"
+  "homepage": "https://github.com/thdevss/broker-pub#readme",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mqtt": "^5.3.3"
+  }
 }
